--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             text-align: center;
             background-color: #222;
             color: #fff;
+            margin: 0;
         }
         #game {
             position: relative;
@@ -17,8 +18,7 @@
             height: 300px;
             border: 2px solid #333;
             margin: 20px auto;
-            background-image: url('path_to_your_background_image.jpg');
-            background-size: cover;
+            background-color: #444;
             overflow: hidden;
         }
         #player {
@@ -26,7 +26,6 @@
             height: 30px;
             background-color: red;
             position: absolute;
-            transition: left 0.1s, top 0.1s;
             border-radius: 50%;
         }
         .treasure {
@@ -41,7 +40,6 @@
             height: 30px;
             background-color: blue;
             position: absolute;
-            transition: left 0.1s, top 0.1s;
             border-radius: 50%;
         }
         #info {
@@ -60,6 +58,12 @@
             background-color: lime;
             width: 100%;
             transition: width 0.3s;
+        }
+        button {
+            padding: 10px 15px;
+            margin-top: 10px;
+            font-size: 16px;
+            cursor: pointer;
         }
     </style>
 </head>
@@ -84,7 +88,6 @@
         const player = document.getElementById('player');
         const treasureCountDisplay = document.getElementById('treasureCount');
         const levelDisplay = document.getElementById('level');
-        const healthDisplay = document.getElementById('health');
         const healthBar = document.getElementById('healthBar');
         const highScoreDisplay = document.getElementById('highScore');
         const restartButton = document.getElementById('restart');
@@ -100,12 +103,6 @@
         let enemyInterval;
         let moveInterval;
         let movingDirection = null;
-        let gameStarted = false;
-
-        function playSound(src) {
-            const audio = new Audio(src);
-            audio.play();
-        }
 
         function initializeGame() {
             playerPosition = { x: 0, y: 0 };
@@ -121,13 +118,10 @@
 
             generateTreasures(3 + (level - 1) * 2);
             generateEnemies(2 + (level - 1));
-            updateTreasureCount();
-            updateLevel();
-            updateHealthBar();
+            updateUI();
 
-            if (enemyInterval) clearInterval(enemyInterval);
+            clearInterval(enemyInterval);
             enemyInterval = setInterval(moveEnemies, 100);
-            gameStarted = false; // Reset game started flag
         }
 
         function generateTreasures(count) {
@@ -145,43 +139,25 @@
             for (let i = 0; i < count; i++) {
                 const enemy = document.createElement('div');
                 enemy.className = 'enemy';
-
-                let enemyPosition;
-                do {
-                    enemyPosition = {
-                        x: Math.floor(Math.random() * 280),
-                        y: Math.floor(Math.random() * 280)
-                    };
-                } while (Math.abs(enemyPosition.x - playerPosition.x) < 30 && Math.abs(enemyPosition.y - playerPosition.y) < 30);
-
-                enemy.style.left = `${enemyPosition.x}px`;
-                enemy.style.top = `${enemyPosition.y}px`;
+                enemy.style.left = `${Math.floor(Math.random() * 280)}px`;
+                enemy.style.top = `${Math.floor(Math.random() * 280)}px`;
                 enemies.push(enemy);
                 game.appendChild(enemy);
             }
         }
 
-        function updateTreasureCount() {
+        function updateUI() {
             treasureCountDisplay.textContent = treasureCount;
-        }
-
-        function updateLevel() {
             levelDisplay.textContent = level;
-        }
-
-        function updateHealthBar() {
             healthBar.style.width = `${(playerHealth / 3) * 100}%`;
         }
 
         function movePlayer() {
-            if (movingDirection === 'up' && playerPosition.y > 0) {
-                playerPosition.y -= 2;
-            } else if (movingDirection === 'down' && playerPosition.y < 270) {
-                playerPosition.y += 2;
-            } else if (movingDirection === 'left' && playerPosition.x > 0) {
-                playerPosition.x -= 2;
-            } else if (movingDirection === 'right' && playerPosition.x < 270) {
-                playerPosition.x += 2;
+            switch (movingDirection) {
+                case 'up': if (playerPosition.y > 0) playerPosition.y -= 2; break;
+                case 'down': if (playerPosition.y < 270) playerPosition.y += 2; break;
+                case 'left': if (playerPosition.x > 0) playerPosition.x -= 2; break;
+                case 'right': if (playerPosition.x < 270) playerPosition.x += 2; break;
             }
             player.style.left = `${playerPosition.x}px`;
             player.style.top = `${playerPosition.y}px`;
@@ -189,16 +165,12 @@
         }
 
         function checkCollisions() {
-            if (!gameStarted) return; // Skip collision checks if the game hasn't started yet
-
             treasures.forEach((treasure, index) => {
                 if (isColliding(player, treasure)) {
                     treasure.remove();
                     treasures.splice(index, 1);
                     treasureCount++;
-                    playSound('path_to_collection_sound.mp3');
-                    knockBackEnemies();
-                    updateTreasureCount();
+                    updateUI();
                     if (treasureCount === (3 + (level - 1) * 2)) {
                         levelUp();
                     }
@@ -208,34 +180,11 @@
             enemies.forEach(enemy => {
                 if (isColliding(player, enemy)) {
                     playerHealth--;
-                    updateHealthBar();
+                    updateUI();
                     if (playerHealth <= 0) {
-                        // You can implement additional logic here if you want when health reaches 0
-                        playerHealth = 0; // Ensure health doesn't go below 0
-                        updateHealthBar();
+                        gameOver();
                     }
                 }
-            });
-        }
-
-        function knockBackEnemies() {
-            enemies.forEach(enemy => {
-                const enemyPosition = {
-                    x: parseInt(enemy.style.left),
-                    y: parseInt(enemy.style.top)
-                };
-
-                const deltaX = enemyPosition.x - playerPosition.x;
-                const deltaY = enemyPosition.y - playerPosition.y;
-
-                const distance = Math.sqrt(deltaX * deltaX + deltaY * deltaY);
-                if (distance < 50) {
-                    enemyPosition.x += (deltaX / distance) * 10;
-                    enemyPosition.y += (deltaY / distance) * 10;
-                }
-
-                enemy.style.left = `${Math.round(enemyPosition.x)}px`;
-                enemy.style.top = `${Math.round(enemyPosition.y)}px`;
             });
         }
 
@@ -245,22 +194,29 @@
             initializeGame();
         }
 
+        function gameOver() {
+            clearInterval(enemyInterval);
+            alert('Game Over! You were caught by an enemy!');
+            if (treasureCount > highScore) {
+                highScore = treasureCount;
+                highScoreDisplay.textContent = highScore;
+            }
+            initializeGame();
+        }
+
         function moveEnemies() {
             enemies.forEach(enemy => {
                 const enemyPosition = {
                     x: parseInt(enemy.style.left),
                     y: parseInt(enemy.style.top)
                 };
-
                 const deltaX = playerPosition.x - enemyPosition.x;
                 const deltaY = playerPosition.y - enemyPosition.y;
-
                 const distance = Math.sqrt(deltaX * deltaX + deltaY * deltaY);
                 if (distance > 0) {
                     enemyPosition.x += (deltaX / distance) * enemySpeed;
                     enemyPosition.y += (deltaY / distance) * enemySpeed;
                 }
-
                 enemy.style.left = `${Math.round(enemyPosition.x)}px`;
                 enemy.style.top = `${Math.round(enemyPosition.y)}px`;
             });
@@ -269,7 +225,6 @@
         function isColliding(div1, div2) {
             const rect1 = div1.getBoundingClientRect();
             const rect2 = div2.getBoundingClientRect();
-
             return !(
                 rect1.top > rect2.bottom ||
                 rect1.bottom < rect2.top ||
@@ -283,7 +238,6 @@
                 movingDirection = event.key.replace('Arrow', '').toLowerCase();
                 if (!moveInterval) {
                     moveInterval = setInterval(movePlayer, 20);
-                    gameStarted = true; // Set the game as started
                 }
             }
         });
